k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d
              name: init-script
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
      volumes:
        - name: init-script
          configMap:
            name: postgres-init-script
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
